--- a/posixat.opam
+++ b/posixat.opam
@@ -10,7 +10,7 @@ build: [
 ]
 depends: [
   "base"
-  "jbuilder" {build}
+  "jbuilder" {build & >= "1.0+beta2"}
   "sexplib"
 ]
 available: [ ocaml-version >= "4.03.0" ]
