--- a/posixat.opam
+++ b/posixat.opam
@@ -1,4 +1,5 @@
 opam-version: "1.2"
+version: "v0.9.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/posixat"
@@ -9,9 +10,9 @@ build: [
   ["jbuilder" "build" "--only-packages" "posixat" "--root" "." "-j" jobs "@install"]
 ]
 depends: [
-  "base"
+  "base"     {>= "v0.9" & < "v0.10"}
   "jbuilder" {build & >= "1.0+beta2"}
-  "sexplib"
+  "sexplib"  {>= "v0.9" & < "v0.10"}
 ]
 available: [ ocaml-version >= "4.03.0" ]
 descr: "
