--- a/posixat.opam
+++ b/posixat.opam
@@ -10,8 +10,11 @@ build: [
 ]
 depends: [
   "base"
-  "jbuilder" {build & >= "1.0+beta2"}
+  "jbuilder"                {build & >= "1.0+beta2"}
+  "ppx_driver"
+  "ppx_sexp_conv"
   "sexplib"
+  "ocaml-migrate-parsetree" {>= "0.4"}
 ]
 available: [ ocaml-version >= "4.03.0" ]
 descr: "
