--- a/posixat.opam
+++ b/posixat.opam
@@ -3,7 +3,7 @@ maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/posixat"
 bug-reports: "https://github.com/janestreet/posixat/issues"
-dev-repo: "https://github.com/janestreet/posixat.git"
+dev-repo: "git+https://github.com/janestreet/posixat.git"
 license: "Apache-2.0"
 build: [
   ["jbuilder" "build" "--only-packages" "posixat" "--root" "." "-j" jobs "@install"]
