--- a/posixat.opam
+++ b/posixat.opam
@@ -11,7 +11,7 @@ build: [
 depends: [
   "base"
   "ppx_driver"
-  "ppx_optcomp_old"
+  "ppx_optcomp"
   "ppx_sexp_conv"
   "sexplib"
   "jbuilder"                {build & >= "1.0+beta12"}
