--- a/posixat.opam
+++ b/posixat.opam
@@ -10,12 +10,12 @@ build: [
 ]
 depends: [
   "base"
-  "ppx_driver"
   "ppx_optcomp"
   "ppx_sexp_conv"
   "sexplib"
-  "jbuilder"                {build & >= "1.0+beta12"}
+  "jbuilder"                {build & >= "1.0+beta18.1"}
   "ocaml-migrate-parsetree" {>= "1.0"}
+  "ppxlib"                  {>= "0.1.1"}
 ]
 available: [ ocaml-version >= "4.04.1" ]
 descr: "
