--- a/posixat.opam
+++ b/posixat.opam
@@ -1,4 +1,5 @@
 opam-version: "1.2"
+version: "v0.11.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/posixat"
@@ -9,10 +10,10 @@ build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "base"
-  "ppx_optcomp"
-  "ppx_sexp_conv"
-  "sexplib"
+  "base"                    {>= "v0.11" & < "v0.12"}
+  "ppx_optcomp"             {>= "v0.11" & < "v0.12"}
+  "ppx_sexp_conv"           {>= "v0.11" & < "v0.12"}
+  "sexplib"                 {>= "v0.11" & < "v0.12"}
   "jbuilder"                {build & >= "1.0+beta18.1"}
   "ocaml-migrate-parsetree" {>= "1.0"}
   "ppxlib"                  {>= "0.1.0"}
