--- a/posixat.opam
+++ b/posixat.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/posixat"
 bug-reports: "https://github.com/janestreet/posixat/issues"
 dev-repo: "git+https://github.com/janestreet/posixat.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
