--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,5 @@
 (library (name posixat) (public_name posixat)
- (c_names posixat_stubs posixat_generated_stubs)
- (libraries base unix sexplib)
+ (c_names posixat_stubs posixat_generated_stubs) (libraries base unix)
  (preprocess
   (pps ppx_optcomp ppx_sexp_conv -type-conv-keep-w32=both
    -apply=optcomp,type_conv)))
