--- a/posixat.opam
+++ b/posixat.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.12.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/posixat"
@@ -10,10 +11,10 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.07.0"}
-  "base"
-  "ppx_optcomp"
-  "ppx_sexp_conv"
+  "ocaml"         {>= "4.07.0"}
+  "base"          {>= "v0.12" & < "v0.13"}
+  "ppx_optcomp"   {>= "v0.12" & < "v0.13"}
+  "ppx_sexp_conv" {>= "v0.12" & < "v0.13"}
   "dune"          {build & >= "1.5.1"}
 ]
 synopsis: "Bindings to the posix *at functions"
