--- a/posixat.opam
+++ b/posixat.opam
@@ -14,7 +14,7 @@ depends: [
   "base"
   "ppx_optcomp"
   "ppx_sexp_conv"
-  "dune"          {build & >= "1.5.1"}
+  "dune"          {>= "1.5.1"}
 ]
 synopsis: "Bindings to the posix *at functions"
 description: "
