--- a/posixat.opam
+++ b/posixat.opam
@@ -16,6 +16,7 @@ depends: [
   "ppx_sexp_conv"
   "dune"          {>= "2.0.0"}
 ]
+available: arch != "arm32" & arch != "x86_32"
 synopsis: "Bindings to the posix *at functions"
 description: "
 Posixat is a small library that just binds the various *at posix
