--- a/posixat.opam
+++ b/posixat.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.16.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/posixat"
@@ -10,10 +11,10 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.14.0"}
-  "base"
-  "ppx_optcomp"
-  "ppx_sexp_conv"
+  "ocaml"         {>= "4.14.0"}
+  "base"          {>= "v0.16" & < "v0.17"}
+  "ppx_optcomp"   {>= "v0.16" & < "v0.17"}
+  "ppx_sexp_conv" {>= "v0.16" & < "v0.17"}
   "dune"          {>= "2.0.0"}
 ]
 available: arch != "arm32" & arch != "x86_32"
