--- a/src/dune
+++ b/src/dune
@@ -1,11 +1,24 @@
-(library (name posixat) (public_name posixat)
- (c_names posixat_stubs posixat_generated_stubs) (libraries base unix)
+(library
+ (foreign_stubs
+  (language c)
+  (names posixat_stubs posixat_generated_stubs))
+ (name posixat)
+ (public_name posixat)
+ (libraries base unix)
  (preprocess
   (pps ppx_optcomp ppx_sexp_conv -type-conv-keep-w32=both
-   -apply=optcomp,type_conv)))
+    -apply=optcomp,type_conv)))
 
-(rule (targets posixat_generated_stubs.c) (deps (:first_dep gen/gen.exe))
- (action (bash "%{first_dep} c > %{targets}")))
+(rule
+ (targets posixat_generated_stubs.c)
+ (deps
+  (:first_dep gen/gen.exe))
+ (action
+  (bash "%{first_dep} c > %{targets}")))
 
-(rule (targets posixat_generated.ml) (deps (:first_dep gen/gen.exe))
- (action (bash "%{first_dep} ml > %{targets}")))
+(rule
+ (targets posixat_generated.ml)
+ (deps
+  (:first_dep gen/gen.exe))
+ (action
+  (bash "%{first_dep} ml > %{targets}")))
