--- a/src/gen/dune
+++ b/src/gen/dune
@@ -1,1 +1,5 @@
-(executables (names gen) (libraries) (preprocess no_preprocessing))
+(executables
+ (modes byte exe)
+ (names gen)
+ (libraries)
+ (preprocess no_preprocessing))
